# pacman

build-aux/: meson-make-symlink.sh
etc/: makepkg.conf.in
lib/libalpm/: add.c  diskspace.c  trans.c  util.c
scripts/: makepkg.sh.in  pacman-key.sh.in  repo-add.sh.in
scripts/libmakepkg/executable/: meson.build
src/pacman/: callback.c  check.c  pacman.c
test/pacman/: pmtest.py
